2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	Restructure the examples directory so that there aren't so many subdirs, which
	tends to slow down builds since they can't be done in parallel.  Also
	'standardize' the executable names a bit more and give the source files
	meaningful names rather than 'main.cc' or similar

	* configure.in:
	* examples/.cvsignore: Removed.
	* examples/Makefile.am:
	* examples/README:
	* examples/pdf-surface/.cvsignore: Removed.
	* examples/pdf-surface/Makefile.am: Removed.
	* examples/png_file/.cvsignore: Removed.
	* examples/png_file/Makefile.am: Removed.
	* examples/ps-surface/.cvsignore: Removed.
	* examples/ps-surface/Makefile.am: Removed.
	* examples/surfaces/image-surface.cc: Renamed from examples/png_file/main.cc.
	* examples/surfaces/pdf-surface.cc: Renamed from examples/pdf-surface/main.cc.
	* examples/surfaces/ps-surface.cc: Renamed from examples/ps-surface/main.cc.
	* examples/surfaces/svg-surface.cc: Renamed from examples/svg-surface/main.cc.
	* examples/svg-surface/.cvsignore: Removed.
	* examples/svg-surface/Makefile.am: Removed.

2008-12-12  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/fontface.h: add more documentation about UserFontFace, including a
	warning about needing to keep the UserFontFace wrapper around as long as we're
	rendering text with that face.
	Include the user-font.cc and toy-text.cc examples in the doxygen reference
	documentation
	* docs/reference/Doxyfile.in: set EXAMPLE_PATH

2008-12-11  Jonathon Jongsma  <jonathon@quotidian.org>

	* examples/text/user-font.cc: enhanced the UserFontFace example quite a bit so
	that it shows a few different virtual functions and actually draws different
	sized boxes for different characters

2008-12-11  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/fontface.h: fix up a lot of the documentation for UserFontFace since
	it was redesigned to use virtual functions rather than callbacks

2008-12-07  Jonathon Jongsma  <jonathon@quotidian.org>
